2008-03-02  Ivan N. Zlatev  <contact@i-nz.net>

	* Enable Undo, Redo, Cut, Copy, Paste, Delete as I've already implmented
	those in System.Design.
	* Much better code for the PropertyGrid
	* Makefile: Fixes and improvements.
	* Program.cs: Fix spacing.
	* DesignTime/CodeProviderDesignerLoader.cs: Report errors only if 
	we weren't successful.
	* DesignTime/UndoRedoEngine.cs: Fix multi undo/redo operations.

2008-01-07  Ivan N. Zlatev <contact@i-nz.net>

	* UI/ToolBoxList/ToolBoxList.cs: 
	 - Drop Docking of the categories for using custom layouting in order
	 to show the categories in the order they were added.
	 - Implement RemoveToolboxItem.
	 - Drop NotImplementedExceptions in order to make it work on MSNET.
	* DesignTime/ToolboxFiller.cs, Project/Workspace.cs, UI/MainView.cs:
	 Move the Toolbox filling code out of the Workspace and create a 
	 Mediator(?) between References and Toolbox.
	* Project/References.cs: Provide add/remove notication.
	* DesignTime/CodeProvider.cs, DesignTime/CodeProviderDesignerLoader.cs:
	 NRefactory doesn't recognize between field and property reference, so
	 we need to tell it in oder to get proper CodeExpressions generated.
	* UndoRedoEngine.cs: Implemented.
	* deps/ICSharpCode.NRefactory.dll: Update to 2.2.1.
	* Makefile: fixes for building without Mono.Design.

2007-10-24  Ivan N. Zlatev <contact@i-nz.net>

	* Program.cs: More exception handling.
	* UI/NewFileDialog.cs: Usability improvements.

2007-09-26  Ivan N. Zlatev <contact@i-nz.net>

	* DesignTime/CodeProviderDesignerLoader.cs: SetUIDirty to 
	clear the errors.
	* UI/ErrorListTabPage.cs, UI/ErrorList.cs: new TabPage.
	* UI/MainView.cs: refactor to use the ErrorListTabPage.
	* Project/Document.cs, UI/MainView.cs: Handle failed to 
	load documents.
	* Project/Document.cs: add disposing behavior.
	* Project/Document.cs, Project/Workspace.cs, UI/MainView.cs:
	Move document load/close logic to the workspace.
	* Project/Workspace.cs, UI/MainView.cs: documents now can be